--- a/scss/fxj/_views.scss
+++ b/scss/fxj/_views.scss
@@ -23,7 +23,7 @@
   height: 30px;
   width: 30px;
   text-align: center;
-  padding-top: 7px;
+  padding-top: 4px;
 
   h2,
   .field--label {
@@ -51,7 +51,7 @@
 .views-field-title {
   a {
     display: block;
-    padding:5px;
+    padding: 1rem;
   }
 }
 .views-field-body {
