--- a/scss/fxj/_footer.scss
+++ b/scss/fxj/_footer.scss
@@ -27,7 +27,7 @@
       max-width: 1100px;
       p {
         color: $alert-warning-text;
-        font-size: 12px;
+        font-size: 1.4rem;
         font-weight: 400;
         margin: 0;
       }
@@ -36,10 +36,11 @@
       }
     }
     #popup-buttons {
-      padding: 0;
-      max-width: 70px;
-      margin: 0;
+      clear: none;
       float: right;
+      margin: 0;
+      max-width: 70px;
+      padding: 0;
 
       .agree-button {
         -webkit-appearance: none;
@@ -47,7 +48,7 @@
         border: 0;
         box-shadow: none;
         color: #66512c;
-        font-size: 12px;
+        font-size: 1.4rem;
         line-height: 1;
         margin: 0;
         padding: 0;
@@ -60,8 +61,8 @@
           border: 1px solid darken($alert-warning-text, 10%);
           display: inline-block;
           font-weight: 300;
-          line-height: .9;
-          margin-left:5px;
+          line-height: .8;
+          margin-left: 5px;
         }
 
         &:hover,
@@ -143,16 +144,17 @@
 }
 //sticky footer in action with js
 .js {
-  .sticky-footer{
-    @include transition(0.5s);
+  .sticky-footer {
+    bottom: 0;
+    position: sticky;
     width: 100%;
-    bottom: auto;
+    z-index: 20;
 
     &.fixed {
-      position: fixed;
-      bottom: 0px;
+      /*position: fixed;
+      bottom: 0;
       top: auto;
-      z-index: 20;
+      z-index: 20;*/
     }
   }
 }
