--- a/css/style.css
+++ b/css/style.css
@@ -8683,89 +8683,100 @@ a.a2a_i, i.a2a_i {
 .twitter-tweet-rendered {
   margin-top: 0 !important; }
 
-/* line 4, ../scss/fxj/_bootstrap-carousel.scss */
-.carousel .item > a .img-responsive, .carousel .item > a img {
-  -webkit-transition: 0.3s;
-  -o-transition: 0.3s;
-  transition: 0.3s; }
-/* line 9, ../scss/fxj/_bootstrap-carousel.scss */
-.carousel .item > a:hover .img-responsive, .carousel .item > a:hover img, .carousel .item > a:focus .img-responsive, .carousel .item > a:focus img {
-  -webkit-transform: scale(1.1);
-  -ms-transform: scale(1.1);
-  -o-transform: scale(1.1);
-  transform: scale(1.1); }
-/* line 14, ../scss/fxj/_bootstrap-carousel.scss */
-.carousel .carousel-caption {
-  background-color: white;
-  bottom: 40px;
-  padding: 0;
-  text-align: left; }
-  /* line 20, ../scss/fxj/_bootstrap-carousel.scss */
-  .carousel .carousel-caption h3 {
-    padding: 0;
-    margin: 0;
-    font-size: 14px;
-    font-weight: 400; }
-    /* line 26, ../scss/fxj/_bootstrap-carousel.scss */
-    .carousel .carousel-caption h3 a {
-      background-color: #16a085;
-      color: white;
-      display: block;
-      padding: 10px;
-      text-decoration: none; }
-  /* line 34, ../scss/fxj/_bootstrap-carousel.scss */
-  .carousel .carousel-caption p {
-    padding: 0;
-    margin: 0; }
-    /* line 38, ../scss/fxj/_bootstrap-carousel.scss */
-    .carousel .carousel-caption p a {
-      color: #333333;
-      display: block;
-      padding: 10px;
-      text-decoration: none; }
-/* line 46, ../scss/fxj/_bootstrap-carousel.scss */
-.carousel .carousel-indicators {
-  margin-bottom: 0;
-  bottom: 0; }
-  /* line 50, ../scss/fxj/_bootstrap-carousel.scss */
-  .carousel .carousel-indicators li {
-    width: 20px;
-    height: 20px;
-    border-radius: 10px;
-    margin-right: 5px; }
-    /* line 54, ../scss/fxj/_bootstrap-carousel.scss */
-    .carousel .carousel-indicators li:hover, .carousel .carousel-indicators li:focus, .carousel .carousel-indicators li.active {
-      background-color: #16a085; }
-/* line 62, ../scss/fxj/_bootstrap-carousel.scss */
-.carousel .carousel-control {
-  opacity: 1;
-  filter: alpha(opacity=100);
-  background: transparent none; }
-  /* line 66, ../scss/fxj/_bootstrap-carousel.scss */
-  .carousel .carousel-control .glyphicon, .carousel .carousel-control .navbar-header #superfish-main-toggle, .navbar-header .carousel .carousel-control #superfish-main-toggle, .carousel .carousel-control .navbar-header .menu .menu-sub:not(.sf-no-children):before, .navbar-header .menu .carousel .carousel-control .menu-sub:not(.sf-no-children):before {
-    width: 40px;
-    height: 40px;
-    border: 1px solid white;
-    border-radius: 20px;
-    font-size: 20px; }
-    /* line 72, ../scss/fxj/_bootstrap-carousel.scss */
-    .carousel .carousel-control .glyphicon:before, .carousel .carousel-control .navbar-header #superfish-main-toggle:before, .navbar-header .carousel .carousel-control #superfish-main-toggle:before, .carousel .carousel-control .navbar-header .menu .menu-sub:not(.sf-no-children):before, .navbar-header .menu .carousel .carousel-control .menu-sub:not(.sf-no-children):before {
-      margin-top: 8px;
-      display: block; }
-  /* line 80, ../scss/fxj/_bootstrap-carousel.scss */
-  .carousel .carousel-control:hover .glyphicon, .carousel .carousel-control:hover .navbar-header #superfish-main-toggle, .navbar-header .carousel .carousel-control:hover #superfish-main-toggle, .carousel .carousel-control:hover .navbar-header .menu .menu-sub:not(.sf-no-children):before, .navbar-header .menu .carousel .carousel-control:hover .menu-sub:not(.sf-no-children):before, .carousel .carousel-control:focus .glyphicon, .carousel .carousel-control:focus .navbar-header #superfish-main-toggle, .navbar-header .carousel .carousel-control:focus #superfish-main-toggle, .carousel .carousel-control:focus .navbar-header .menu .menu-sub:not(.sf-no-children):before, .navbar-header .menu .carousel .carousel-control:focus .menu-sub:not(.sf-no-children):before {
+/* line 2, ../scss/fxj/_bootstrap-carousel.scss */
+.carousel {
+  max-height: 300px;
+  overflow: hidden; }
+  /* line 7, ../scss/fxj/_bootstrap-carousel.scss */
+  .carousel .item > a .img-responsive, .carousel .item > a img {
+    -webkit-transition: 0.3s;
+    -o-transition: 0.3s;
+    transition: 0.3s; }
+  /* line 12, ../scss/fxj/_bootstrap-carousel.scss */
+  .carousel .item > a:hover .img-responsive, .carousel .item > a:hover img, .carousel .item > a:focus .img-responsive, .carousel .item > a:focus img {
+    -webkit-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    -o-transform: scale(1.1);
+    transform: scale(1.1); }
+  /* line 17, ../scss/fxj/_bootstrap-carousel.scss */
+  .carousel .carousel-caption {
     background-color: white;
-    color: #16a085; }
+    bottom: auto;
+    padding: 0;
+    text-align: left;
+    top: 20px; }
+    /* line 24, ../scss/fxj/_bootstrap-carousel.scss */
+    .carousel .carousel-caption h3 {
+      padding: 0;
+      margin: 0;
+      font-size: 1.6rem;
+      font-weight: 300; }
+      /* line 30, ../scss/fxj/_bootstrap-carousel.scss */
+      .carousel .carousel-caption h3 a {
+        background-color: #16a085;
+        color: white;
+        display: block;
+        padding: 10px;
+        text-decoration: none; }
+    /* line 38, ../scss/fxj/_bootstrap-carousel.scss */
+    .carousel .carousel-caption p {
+      display: none;
+      padding: 0;
+      margin: 0; }
+      /* line 43, ../scss/fxj/_bootstrap-carousel.scss */
+      .carousel .carousel-caption p a {
+        color: #333333;
+        display: block;
+        padding: 10px;
+        text-decoration: none; }
+  /* line 51, ../scss/fxj/_bootstrap-carousel.scss */
+  .carousel .carousel-indicators {
+    margin-bottom: 0;
+    bottom: 10px; }
+    /* line 55, ../scss/fxj/_bootstrap-carousel.scss */
+    .carousel .carousel-indicators li {
+      width: 20px;
+      height: 20px;
+      border-radius: 10px;
+      margin-right: 5px; }
+      /* line 59, ../scss/fxj/_bootstrap-carousel.scss */
+      .carousel .carousel-indicators li:hover, .carousel .carousel-indicators li:focus, .carousel .carousel-indicators li.active {
+        background-color: #16a085; }
+  /* line 67, ../scss/fxj/_bootstrap-carousel.scss */
+  .carousel .carousel-control {
+    opacity: 1;
+    filter: alpha(opacity=100);
+    background: transparent none;
+    bottom: 40px;
+    top: auto; }
+    /* line 74, ../scss/fxj/_bootstrap-carousel.scss */
+    .carousel .carousel-control .glyphicon, .carousel .carousel-control .navbar-header #superfish-main-toggle, .navbar-header .carousel .carousel-control #superfish-main-toggle, .carousel .carousel-control .navbar-header .menu .menu-sub:not(.sf-no-children):before, .navbar-header .menu .carousel .carousel-control .menu-sub:not(.sf-no-children):before {
+      width: 40px;
+      height: 40px;
+      border: 1px solid white;
+      border-radius: 20px;
+      font-size: 20px; }
+      /* line 80, ../scss/fxj/_bootstrap-carousel.scss */
+      .carousel .carousel-control .glyphicon:before, .carousel .carousel-control .navbar-header #superfish-main-toggle:before, .navbar-header .carousel .carousel-control #superfish-main-toggle:before, .carousel .carousel-control .navbar-header .menu .menu-sub:not(.sf-no-children):before, .navbar-header .menu .carousel .carousel-control .menu-sub:not(.sf-no-children):before {
+        margin-top: 8px;
+        display: block; }
+    /* line 88, ../scss/fxj/_bootstrap-carousel.scss */
+    .carousel .carousel-control:hover .glyphicon, .carousel .carousel-control:hover .navbar-header #superfish-main-toggle, .navbar-header .carousel .carousel-control:hover #superfish-main-toggle, .carousel .carousel-control:hover .navbar-header .menu .menu-sub:not(.sf-no-children):before, .navbar-header .menu .carousel .carousel-control:hover .menu-sub:not(.sf-no-children):before, .carousel .carousel-control:focus .glyphicon, .carousel .carousel-control:focus .navbar-header #superfish-main-toggle, .navbar-header .carousel .carousel-control:focus #superfish-main-toggle, .carousel .carousel-control:focus .navbar-header .menu .menu-sub:not(.sf-no-children):before, .navbar-header .menu .carousel .carousel-control:focus .menu-sub:not(.sf-no-children):before {
+      background-color: white;
+      color: #16a085; }
 
 @media (min-width: 768px) {
-  /* line 90, ../scss/fxj/_bootstrap-carousel.scss */
+  /* line 98, ../scss/fxj/_bootstrap-carousel.scss */
   .carousel .carousel-caption {
-    bottom: 30%;
-    width: 30%; }
-  /* line 95, ../scss/fxj/_bootstrap-carousel.scss */
-  .carousel .carousel-control .glyphicon, .carousel .carousel-control .navbar-header #superfish-main-toggle, .navbar-header .carousel .carousel-control #superfish-main-toggle, .carousel .carousel-control .navbar-header .menu .menu-sub:not(.sf-no-children):before, .navbar-header .menu .carousel .carousel-control .menu-sub:not(.sf-no-children):before {
-    bottom: 30%;
-    top: auto; } }
+    width: 30%;
+    top: 40px; }
+    /* line 102, ../scss/fxj/_bootstrap-carousel.scss */
+    .carousel .carousel-caption p {
+      display: block; }
+      /* line 104, ../scss/fxj/_bootstrap-carousel.scss */
+      .carousel .carousel-caption p a {
+        display: block;
+        min-height: 14rem; } }
 /* line 1, ../scss/fxj/_views.scss */
 .view-header {
   margin-bottom: 15px; }
