--- a/scss/fxj/_bootstrap-carousel.scss
+++ b/scss/fxj/_bootstrap-carousel.scss
@@ -1,5 +1,8 @@
 
 .carousel {
+  max-height: 300px;
+  overflow: hidden;
+
   .item > a {
     .img-responsive {
       @include transition(0.3s);
@@ -13,15 +16,16 @@
   }
   .carousel-caption {
     background-color: white;
-    bottom: 40px;
+    bottom: auto;
     padding: 0;
     text-align: left;
+    top: 20px;
 
     h3 {
       padding: 0;
       margin: 0;
-      font-size: 14px;
-      font-weight: 400;
+      font-size: 1.6rem;
+      font-weight: 300;
 
       a {
         background-color: $brand-primary;
@@ -32,6 +36,7 @@
       }
     }
     p {
+      display: none;
       padding: 0;
       margin: 0;
 
@@ -45,7 +50,7 @@
   }
   .carousel-indicators {
     margin-bottom: 0;
-    bottom: 0;
+    bottom: 10px;
 
     li {
       @include square(20px);
@@ -62,6 +67,9 @@
   .carousel-control {
     @include opacity(1);
     background: transparent none;
+    bottom: 40px;
+    top: auto;
+
 
     .glyphicon {
       @include square(40px);
@@ -88,13 +96,15 @@
 @media (min-width: $screen-sm-min) {
   .carousel {
     .carousel-caption {
-      bottom: 30%;
       width: 30%;
-    }
-    .carousel-control {
-      .glyphicon {
-        bottom: 30%;
-        top: auto;
+      top: 40px;
+
+      p {
+        display: block;
+        a {
+          display: block;
+          min-height: 14rem;
+        }
       }
     }
   }
